package poo.vehicles;

import java.time.LocalDate;

import pt.estg.poo.inembase.EmergencyVehicle;

public class Ambulance {
}
