package pt.estg.poo.inem.Enums;

public enum EmergencyType {
    ACCIDENT,FIRE,CARDIAC_ARREST,TRANSPORT, OTHER;
}
