package pt.estg.poo.inem.Enums;

public enum MissionContext {
    NATIONAL, INTERNACIONAL
}
