package pt.estg.poo.inem.domain;

public abstract class AppVehicle {
}
