package pt.estg.poo.inem.domain;

public class Doctor {
    
}
