package pt.estg.poo.inem.domain;

public class MedicalHelicopter extends AppVehicle {
}
