package pt.estg.poo.inem.domain;

public class RapidResponseCar extends AppVehicle {
}
