package pt.estg.poo.inem.dto;

public class ContextStatsDTO {
}
