package pt.estg.poo.inem.interfaces;

public interface EmergencyMission {
    public int getDurationMinutes();
    public String getDescription();
}
