package pt.estg.poo.inem.interfaces;

public interface IMissionManager {
}
