package pt.estg.poo.inem.management;

public class VehicleManager {
}
