classDiagram
    direction TB

    namespace BaseClassesJAR {
        class EmergencyVehicle {
            <<abstract>>
            -String manufacturer
            -LocalDate incorporationDate
            -double maxSpeed
            +EmergencyVehicle(String, LocalDate, double)
            +getManufacturer() String
            +getIncorporationDate() LocalDate
            +getMaxSpeed() double
        }

        class EmergencyMission {
            <<interface>>
            +getDurationMinutes() int
            +getDescription() String
        }

        class MissionLoggable {
            <<interface>>
            +addMission(EmergencyMission m) void
            +getMissions() EmergencyMission[]
        }

        class EmergencyType {
            <<enum>>
            ACCIDENT
            FIRE
            CARDIAC_ARREST
            TRANSPORT
            OTHER
        }

        class Serializable {
            <<interface>>
        }
    }

    namespace DomainImplementations {
        
        class TeamMember {
            -int number
            -String name
            -String role
            +TeamMember(int, String, String)
            +getNumber() int
            +getName() String
            +getRole() String
            +toString() String
        }

        class Doctor {
            +Doctor(int, String)
        }

        class MissionContext {
            <<enum>>
            NATIONAL
            INTERNATIONAL
        }

        class AppVehicle {
            <<abstract>>
            -LocalDate lastInspectionDate
            -LocalDate nextInspectionDate
            -double weight
            -boolean isOperational
            -EmergencyMission[] missions
            -int missionCount
            +AppVehicle(String, LocalDate, double, LocalDate, LocalDate, double, boolean)
            +getId() String
            +getLastInspectionDate() LocalDate
            +getNextInspectionDate() LocalDate
            +getWeight() double
            +isOperational() boolean
            +setOperational(boolean) void
            +addMission(EmergencyMission m) void
            +getMissions() EmergencyMission[]
            -resizeMissions() void
            +toString() String
        }

        class Ambulance {
            -String licensePlate
            -int stretcherCapacity
            -String lifeSupportLevel
            +Ambulance(String, LocalDate, double, LocalDate, LocalDate, double, boolean, String, int, String)
            +getId() String
            +getLicensePlate() String
            +getStretcherCapacity() int
            +getLifeSupportLevel() String
            +toString() String
        }

        class MedicalHelicopter {
            -String registrationTailNumber
            -int maxFlightAltitude
            -int rotorCount
            +MedicalHelicopter(String, LocalDate, double, LocalDate, LocalDate, double, boolean, String, int, int)
            +getId() String
            +getRegistrationTailNumber() String
            +getMaxFlightAltitude() int
            +getRotorCount() int
            +toString() String
        }

        class RapidResponseCar {
            -String licensePlate
            -boolean hasAdvancedDefibrillator
            +RapidResponseCar(String, LocalDate, double, LocalDate, LocalDate, double, boolean, String, boolean)
            +getId() String
            +getLicensePlate() String
            +hasAdvancedDefibrillator() boolean
            +toString() String
        }

        class InemMission {
            -LocalDateTime startDate
            -LocalDateTime endDate
            -EmergencyType type
            -MissionContext context
            -String description
            -String authorizerName
            -String authorizerRole
            -MedicalTeam assignedTeam
            +InemMission(LocalDateTime, LocalDateTime, EmergencyType, MissionContext, String, String, String, MedicalTeam)
            +getDurationMinutes() int
            +getDescription() String
            +getStartDate() LocalDateTime
            +getEndDate() LocalDateTime
            +getType() EmergencyType
            +getContext() MissionContext
            +getAuthorizerName() String
            +getAuthorizerRole() String
            +getAssignedTeam() MedicalTeam
            +toString() String
        }

        class MedicalTeam {
            -String teamId
            -TeamMember[] members
            -int memberCount
            -Doctor responsibleDoctor
            -static final int MAX_MEMBERS
            +MedicalTeam(String, Doctor)
            +getTeamId() String
            +getResponsibleDoctor() Doctor
            +getMemberCount() int
            +addMember(TeamMember m) boolean
            +removeMember(TeamMember m) boolean
            +setResponsibleDoctor(Doctor d) void
            +getMembers() TeamMember[]
            -resizeMembers() void
            +toString() String
        }
    }

    namespace DataTransferObjects {
        class MissionTypeStatsDTO {
            <<DTO>>
            +String vehicleType
            +EmergencyType type
            +double averageMissions
            +MissionTypeStatsDTO(String, EmergencyType, double)
            +toString() String
        }

        class ContextStatsDTO {
            <<DTO>>
            +int nationalCount
            +int internationalCount
            +ContextStatsDTO(int, int)
            +toString() String
        }
    }

    namespace Interfaces {
        class IVehicleManager {
            <<interface>>
            +addVehicle(EmergencyVehicle v) boolean
            +updateVehicle(String id, EmergencyVehicle newV) boolean
            +removeVehicle(String id) boolean
            +getVehicleById(String id) EmergencyVehicle
            +getAllVehicles() EmergencyVehicle[]
            +getVehiclesIncorporatedInYear(int year) EmergencyVehicle[]
            +getVehiclesReachingEndOfLife(int yearsThreshold) EmergencyVehicle[]
            +getVehiclesWithMinMissionsInYear(int minMissions, int year) EmergencyVehicle[]
        }

        class IMissionManager {
            <<interface>>
            +addMission(EmergencyMission m, EmergencyVehicle v) boolean
            +getAllMissions() EmergencyMission[]
            +getMissionReportForVehicle(EmergencyVehicle v) EmergencyMission[]
            +getAverageMissionsPerVehicleAndType() MissionTypeStatsDTO[]
            +getNationalVsInternationalStats(EmergencyVehicle v) ContextStatsDTO
            +getMissionsByTeamMember(TeamMember m) EmergencyMission[]
        }

        class ITeamManager {
            <<interface>>
            +addTeam(MedicalTeam t) boolean
            +getTeamById(String teamId) MedicalTeam
            +getAllTeams() MedicalTeam[]
        }

        class IFileHandler {
            <<interface>>
            +saveDataToFile(String filename, INEMFacade system) boolean
            +loadDataFromFile(String filename, INEMFacade system) boolean
        }
    }

    namespace Management {
        class VehicleManager {
            -EmergencyVehicle[] vehicles
            -int vehicleCount
            +VehicleManager()
            -resizeArray() void
        }

        class MissionManager {
            -EmergencyMission[] missions
            -int missionCount
            +MissionManager()
            -resizeArray() void
        }

        class TeamManager {
            -MedicalTeam[] teams
            -int teamCount
            +TeamManager()
            -resizeArray() void
        }

        class FileManager {
            +FileManager()
            +saveDataToFile(String filename, INEMFacade system) boolean
            +loadDataFromFile(String filename, INEMFacade system) boolean
        }

        class INEMFacade {
            -IVehicleManager vehicleManager
            -IMissionManager missionManager
            -ITeamManager teamManager
            -IFileHandler fileManager
            +INEMFacade()
            +getVehicleManager() IVehicleManager
            +getMissionManager() IMissionManager
            +getTeamManager() ITeamManager
            +getFileManager() IFileHandler
        }
    }

    EmergencyVehicle ..|> Serializable
    EmergencyVehicle ..|> MissionLoggable
    
    Doctor --|> TeamMember

    AppVehicle --|> EmergencyVehicle
    Ambulance --|> AppVehicle
    MedicalHelicopter --|> AppVehicle
    RapidResponseCar --|> AppVehicle

    InemMission ..|> EmergencyMission

    VehicleManager ..|> IVehicleManager
    MissionManager ..|> IMissionManager
    TeamManager ..|> ITeamManager
    FileManager ..|> IFileHandler

    MedicalTeam o-- TeamMember : "agrega 1..*"
    MedicalTeam *-- Doctor : "exige 1"
    InemMission --> EmergencyType
    InemMission --> MissionContext
    InemMission --> MedicalTeam

    INEMFacade *-- IVehicleManager
    INEMFacade *-- IMissionManager
    INEMFacade *-- ITeamManager
    INEMFacade *-- IFileHandler

    VehicleManager o-- EmergencyVehicle : "gere 0..*"
    MissionManager o-- EmergencyMission : "gere 0..*"
    TeamManager o-- MedicalTeam : "gere 0..*"

    IMissionManager ..> MissionTypeStatsDTO : "retorna"
    IMissionManager ..> ContextStatsDTO : "retorna"